[project]
name = "takeiteasy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "pygame>=2.6.1",
    "torch>=2.9.1",
    "torchtyping>=0.1.5",
    "torchview>=0.2.7",
]
