[project]
name = "takeiteasy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "pygame>=2.6.1",
    "torch>=2.9.1",
    "torchtyping>=0.1.5",
    "torchview>=0.2.7",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 88
target-version = "py311"

# Files to include/exclude
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E203", # whitespace before ':', conflicts with Black
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"